--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "face-recognition-webapp",
+  "name": "facephilia",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -35,5 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://chuapingchan.github.io/face-recognition-webapp"
+  "homepage": "https://chuapingchan.github.io/facephilia"
 }
